# colorls

./: .gitignore  README.md  colorls.ini  colorls.py  colorls.sh  colorls.sh.wip  setup.cfg  setup.py
colorls/: colorls.py
