[metadata]
name = colorls
version = 0.1.1
author = Romeet Chhabra
author_email = romeetc@gmail.com
description = Pure Python implementation of subset of ls command with colors and icons
long_description = file: README.md
long_description_content_type = text/markdown
url = https://gitlab.com/compilation-error/colorls
project_urls =
    Bug Tracker = https://gitlab.com/compilation-error/colorls/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent